testsuite/tests/parser/should_fail/T18569.hs
main :: IO ()
main = case (# 10, 11 #) of
   (#     foo, bar #) -> print (foo,bar)
