testsuite/tests/parser/should_fail/T18569.stderr

T18569.hs:3:5: error:
    Parse error in pattern: # foo
    Perhaps you meant an unboxed sum or an unboxed tuple. 
    To allow this, enable language extension 'UnboxedTuples'.
